# military-vehicle-detection

./: CMakeLists.txt  README.md  main.cpp
