cmake_minimum_required(VERSION 3.10)
project(TankTespiti)
set(CMAKE_CXX_STANDARD 17)
set(OpenCV_DIR "C:/Users/ebrar/Downloads/opencv/build/x64/vc16/lib")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(tanktespiti main.cpp)
target_link_libraries(tanktespiti ${OpenCV_LIBS})